tests/errors/flow/if-false-no-else.fn
---
Description: if(false) then-branch never runs and there is no else
Expected: FN4001
---

type Program
{
    fn Bad -> i32
    {
        if false
        {
            return 1
        }
    }

    static fn Main -> i32
    {
        return Bad()
    }
}
